# Squeezer

./: .gitignore  CMakeLists.txt
data/etc/: squeezer.conf
src/: main.cpp
src/net/: Download.cpp  Download.h  NetJob.h
src/teamcity/: BuildIndex.cpp  BuildIndex.h
